# libvips-rs-msvc

./: .gitignore  Cargo.toml  README.md  build.rs
libvips/: gen.py  lib.command.txt  steps.txt
src/: bindings.rs  error.rs  image.rs  image_ext.rs  lib.rs  operations.rs  operator.rs  ops.rs  utils.rs  voption.rs
tools/: cache.bat  gobject-2.0.lib  libvips.lib  opt.bat  vipscache.c  vipscache.def  vipscache.exp  vipscache.lib  voption.c  voption.exp  voption.lib
