[package]
name = "libvips"
description = "Safe bindings for libvips"
version = "1.7.0"
repository = "https://github.com/olxgroup-oss/libvips-rust-bindings"
readme = "README.md"
license = "MIT"
edition = "2021"
keywords = ["libvips", "bindgen", "image", "bindings"]
categories = ["multimedia::images", "multimedia::encoding", "graphics"]

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
